# fast-api-template

./: pyproject.toml  run_template.py  venv.sh
app/: exception_handler.py  main.py
app/modules/: errors.py  logger.py
app/routers/: routers.py
app/routers/users/: __init__.py
app/routers/users/info/: controller.py  model.py
